Add doc test to CI
Ignore some already existing examples

Fixes #49

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,8 +6,7 @@ on:
   pull_request:
 
 jobs:
-
-  test:
+  deploy-test:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
@@ -24,3 +23,21 @@ jobs:
           mdbook-version: '${{ steps.mdbook-version.outputs.MDBOOK_VERSION }}'
 
       - run: mdbook build
+
+  doc-test:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Read .env
+        id: mdbook-version
+        run: |
+          . ./.env
+          echo "::set-output name=MDBOOK_VERSION::${MDBOOK_VERSION}"
+
+      - name: Setup mdBook
+        uses: peaceiris/actions-mdbook@v1
+        with:
+          mdbook-version: '${{ steps.mdbook-version.outputs.MDBOOK_VERSION }}'
+
+      - run: mdbook test
