--- a/.github/workflows/url-check.yml
+++ b/.github/workflows/url-check.yml
@@ -13,3 +13,5 @@ jobs:
     - uses: gaurav-nelson/github-action-markdown-link-check@v1
       with:
         use-verbose-mode: 'yes'
+        use-quiet-mode: 'yes'
+        config-file: '.github/workflows/mlc_config.json'
