restore to upstream's state

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,3 +41,18 @@ jobs:
           mdbook-version: '${{ steps.mdbook-version.outputs.MDBOOK_VERSION }}'
 
       - run: mdbook test
+
+  lint:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2
+      - name: Lint all files in current directory
+        uses: avto-dev/markdown-lint@v1
+        with:
+          config: '.markdownlint.yaml' 
+          args: '*.md'
+      - name: Lint all files recursively
+        uses: avto-dev/markdown-lint@v1
+        with:
+          config: '.markdownlint.yaml' 
+          args: '**/*.md'
