--- a/.markdownlint.yaml
+++ b/.markdownlint.yaml
@@ -1,14 +1,21 @@
-# See https://github.com/DavidAnson/markdownlint/blob/main/doc/Rules.md
 ---
+# Use `#` for headers
 MD003:
   style: atx
-MD010:
-  code_blocks: false
+
+# Set maximum line length
 MD013:
   line_length: 300
+
+# Use `---` for horizontal rule
 MD035:
   style: ---
+
+# Use ``` for code blocks
 MD046:
   style: fenced
 MD048:
   style: backtick
+
+# See https://github.com/DavidAnson/markdownlint/blob/main/doc/Rules.md for
+# additional info
