--- a/.github/workflows/url-check-on-change.yml
+++ b/.github/workflows/url-check-on-change.yml
@@ -16,3 +16,4 @@ jobs:
         use-quiet-mode: 'yes'
         config-file: '.github/workflows/url-check-config.json'
         check-modified-files-only: 'yes'
+        base-branch: 'main'
