--- a/book.toml
+++ b/book.toml
@@ -4,10 +4,14 @@ authors = ["the rust-unofficial authors"]
 description = "A catalogue of Rust design patterns, anti-patterns and idioms"
 language = "en"
 multilingual = false
-src = "."
+src = "src"
 
 [build]
 create-missing = false
+extra-watch-dirs = ["po"]
+
+[preprocessor.gettext]
+after = ["links"]
 
 [rust]
 edition = "2018"
@@ -18,5 +22,14 @@ site-url = "/patterns/"
 git-repository-url = "https://github.com/rust-unofficial/patterns"
 git-repository-icon = "fa-github"
 edit-url-template = "https://github.com/rust-unofficial/patterns/edit/main/{path}"
+additional-css = ["language-picker.css"]
+curly-quotes = true
+
+[output.html.fold]
+enable = true
+level = 0
+
+[output.html.playground]
+editable = true
 
 # [output.linkcheck]  # enable the "mdbook-linkcheck" renderer, disabled due to gh-actions
