Add third_party directory

--- a/book.toml
+++ b/book.toml
@@ -8,7 +8,7 @@ src = "src"
 
 [build]
 create-missing = false
-extra-watch-dirs = ["po"]
+extra-watch-dirs = ["po", "third_party"]
 
 [preprocessor.gettext]
 after = ["links"]
