--- a/.github/workflows/install-mdbook/action.yml
+++ b/.github/workflows/install-mdbook/action.yml
@@ -10,12 +10,14 @@ runs:
       run: |
         . ./.env
         echo "::set-output name=MDBOOK_VERSION::${MDBOOK_VERSION}"
+      shell: bash
 
     - name: Read mdbook-i8n-helpers version from .env
       id: mdbook-i8n-helpers-version
       run: |
         . ./.env
         echo "::set-output name=MDBOOK_I8N_HELPERS_VERSION::${MDBOOK_I8N_HELPERS_VERSION}"
+      shell: bash
 
     # The --locked flag is important for reproducible builds. It also
     # avoids breakage due to skews between mdbook and mdbook-svgbob.
