--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Setup Rust cache
+        uses: ./.github/workflows/setup-rust-cache
+
       - name: Install mdbook
         uses: ./.github/workflows/install-mdbook
 
@@ -30,6 +33,9 @@ jobs:
 
       - name: Install Gettext
         run: sudo apt install gettext
+
+      - name: Setup Rust cache
+        uses: ./.github/workflows/setup-rust-cache
 
       - name: Install mdbook
         uses: ./.github/workflows/install-mdbook
@@ -89,6 +95,9 @@ jobs:
 
       - name: Install Gettext
         run: sudo apt install gettext
+
+      - name: Setup Rust cache
+        uses: ./.github/workflows/setup-rust-cache
 
       - name: Install mdbook
         uses: ./.github/workflows/install-mdbook
