--- a/book.toml
+++ b/book.toml
@@ -17,19 +17,20 @@ after = ["links"]
 edition = "2018"
 
 [output.html]
+curly-quotes = true
 default-theme = "rust"
 site-url = "/patterns/"
 git-repository-url = "https://github.com/rust-unofficial/patterns"
 git-repository-icon = "fa-github"
 edit-url-template = "https://github.com/rust-unofficial/patterns/edit/main/{path}"
-additional-css = ["language-picker.css"]
-curly-quotes = true
+additional-css = ["./language-picker.css"]
+additional-js = ["./third_party/mdbook/book.js"]
 
 [output.html.fold]
 enable = true
 level = 1
 
 [output.html.playground]
-editable = true
+editable = false
 
 # [output.linkcheck]  # enable the "mdbook-linkcheck" renderer, disabled due to gh-actions
