Update publishing action

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Publish
+name: Deploy mdBook sites to GH Pages
 
 on:
   push:
@@ -54,13 +54,14 @@ jobs:
       #     done
 
       - name: Setup Pages
-        uses: actions/configure-pages@v2
+        id: pages
+        uses: actions/configure-pages@v3
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: book
+          path: ./book
 
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v1
+        uses: actions/deploy-pages@v2
