Update GH actions file

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,8 +2,7 @@ name: Deploy mdBook sites to GH Pages
 
 on:
   push:
-    branches:
-      - main
+    branches: ["main"]
   workflow_dispatch:
 
 permissions:
@@ -13,7 +12,7 @@ permissions:
 
 # Allow one concurrent deployment
 concurrency:
-  group: pages
+  group: "pages"
   cancel-in-progress: true
 
 env:
