Add comment on language

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,6 +20,7 @@ env:
   # TODO: Update the language picker in index.hbs to link new languages.
   # TODO: As long as https://github.com/google/mdbook-i18n-helpers/issues/12 is not implemented, yet.
   # TODO: Activate when first translation is available
+  # These are the languages in addition to 'en', which is the main language
   # LANGUAGES: xx
 
 jobs:
