Activate actions and add 'de' to language picker, reformat theme

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,9 +19,8 @@ env:
   CARGO_TERM_COLOR: always
   # TODO: Update the language picker in index.hbs to link new languages.
   # TODO: As long as https://github.com/google/mdbook-i18n-helpers/issues/12 is not implemented, yet.
-  # TODO: Activate when first translation is available
   # These are the languages in addition to 'en', which is the main language
-  # LANGUAGES: xx
+  LANGUAGES: de
 
 jobs:
   publish:
@@ -42,16 +41,15 @@ jobs:
       - name: Build course in English
         run: mdbook build -d book
 
-      # TODO: Activate when first translation is available
-      # - name: Build all translations
-      #   run: |
-      #     for po_lang in ${{ env.LANGUAGES }}; do
-      #         echo "::group::Building $po_lang translation"
-      #         MDBOOK_BOOK__LANGUAGE=$po_lang \
-      #         MDBOOK_OUTPUT__HTML__SITE_URL=/patterns/$po_lang/ \
-      #         mdbook build -d book/$po_lang
-      #         echo "::endgroup::"
-      #     done
+      - name: Build all translations
+        run: |
+          for po_lang in ${{ env.LANGUAGES }}; do
+              echo "::group::Building $po_lang translation"
+              MDBOOK_BOOK__LANGUAGE=$po_lang \
+              MDBOOK_OUTPUT__HTML__SITE_URL=/patterns/$po_lang/ \
+              mdbook build -d book/$po_lang
+              echo "::endgroup::"
+          done
 
       - name: Setup Pages
         id: pages
