Hardcode de as only language for CI temporarily

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -88,7 +88,9 @@ jobs:
       matrix:
         language: ${{ fromJSON(needs.find-translations.outputs.languages) }}
     env:
-      MDBOOK_BOOK__LANGUAGE: ${{ matrix.language }}
+      # TODO: Fix CI for all languages
+      # MDBOOK_BOOK__LANGUAGE: ${{ matrix.language }}
+      MDBOOK_BOOK__LANGUAGE: de
     steps:
       - name: Checkout
         uses: actions/checkout@v3
