--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -88,9 +88,7 @@ jobs:
       matrix:
         language: ${{ fromJSON(needs.find-translations.outputs.languages) }}
     env:
-      # TODO: Fix CI for all languages
-      # MDBOOK_BOOK__LANGUAGE: ${{ matrix.language }}
-      MDBOOK_BOOK__LANGUAGE: de
+      MDBOOK_BOOK__LANGUAGE: ${{ matrix.language }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
