Update pinned versions

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MDBOOK_VERSION=0.4.35
-MDBOOK_I18N_HELPERS_VERSION=0.2.4
+MDBOOK_VERSION=0.4.37
+MDBOOK_I18N_HELPERS_VERSION=0.3.2
+MDBOOK_PANDOC_VERSION=0.6.0
