feat(pdf): add pdf download (#399)
Signed-off-by: simonsan <14062932+simonsan@users.noreply.github.com>

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ MDBOOK_VERSION=0.4.37
 MDBOOK_I18N_HELPERS_VERSION=0.3.2
 MDBOOK_PANDOC_VERSION=0.6.0
 MDBOOK_LAST_CHANGED_VERSION=0.1.4
+PANDOC_VERSION=3.1.12.2
