--- a/book.toml
+++ b/book.toml
@@ -19,7 +19,7 @@ edition = "2021"
 default-theme = "rust"
 site-url = "/patterns/"
 git-repository-url = "https://github.com/rust-unofficial/patterns"
-git-repository-icon = "fa-github"
+git-repository-icon = "fab-github"
 edit-url-template = "https://github.com/rust-unofficial/patterns/edit/main/{path}"
 additional-css = [
   "./theme/css/language-picker.css",
