--- a/book.toml
+++ b/book.toml
@@ -16,10 +16,10 @@ after = ["links"]
 edition = "2021"
 
 [output.html]
+smart-punctuation = true
 default-theme = "rust"
 site-url = "/patterns/"
 git-repository-url = "https://github.com/rust-unofficial/patterns"
-git-repository-icon = "fa-github"
 edit-url-template = "https://github.com/rust-unofficial/patterns/edit/main/{path}"
 additional-css = [
   "./theme/css/language-picker.css",
@@ -27,6 +27,7 @@ additional-css = [
 ]
 
 [preprocessor.last-changed]
+optional = true
 command = "mdbook-last-changed"
 renderer = ["html"]
 
